[gd_scene load_steps=5 format=3 uid="uid://c2aks78wf35pe"]

[ext_resource type="PackedScene" uid="uid://danbn6jjfghru" path="res://src/scenes/ui/components/fade_rect.tscn" id="1_0uyf7"]
[ext_resource type="Script" path="res://src/scripts/ui/pages/settings.gd" id="1_6gtrg"]
[ext_resource type="PackedScene" uid="uid://bs7s2yo0kutpx" path="res://src/scenes/ui/components/safe_margins.tscn" id="2_868ow"]
[ext_resource type="PackedScene" uid="uid://blgj8gsmcd1ad" path="res://src/scenes/ui/components/back_button.tscn" id="3_1w24i"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6gtrg")

[node name="SafeMargins" parent="." instance=ExtResource("2_868ow")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="SafeMargins"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PageTitle" type="Label" parent="SafeMargins/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Tabs" type="TabContainer" parent="SafeMargins/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Video" type="MarginContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fullscreen" type="CheckButton" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "UI Scale: "

[node name="UIScale" type="LineEdit" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
virtual_keyboard_type = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("fade_rect") instance=ExtResource("3_1w24i")]
layout_mode = 2
back_scene = "res://src/scenes/ui/pages/main_menu.tscn"
fade_rect = NodePath("../../../../../../../../../FadeRect")

[node name="Multiplayer" type="MarginContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Multiplayer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Multiplayer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Multiplayer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Multiplayer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Signaling Server: "

[node name="SignalingServer" type="LineEdit" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Multiplayer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Multiplayer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" parent="SafeMargins/MarginContainer/VBoxContainer/Tabs/Multiplayer/ScrollContainer/VBoxContainer/HBoxContainer2" node_paths=PackedStringArray("fade_rect") instance=ExtResource("3_1w24i")]
layout_mode = 2
back_scene = "res://src/scenes/ui/pages/main_menu.tscn"
fade_rect = NodePath("../../../../../../../../../FadeRect")

[node name="FadeRect" parent="." instance=ExtResource("1_0uyf7")]
layout_mode = 2
anchors_preset = 0

[connection signal="toggled" from="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer/VBoxContainer/Fullscreen" to="." method="_on_toggle_fullscreen_toggled"]
[connection signal="text_changed" from="SafeMargins/MarginContainer/VBoxContainer/Tabs/Video/ScrollContainer/VBoxContainer/HBoxContainer/UIScale" to="." method="_on_ui_scale_text_changed"]
[connection signal="text_changed" from="SafeMargins/MarginContainer/VBoxContainer/Tabs/Multiplayer/ScrollContainer/VBoxContainer/HBoxContainer/SignalingServer" to="." method="_on_signaling_server_text_changed"]
